<resources>
    <string name="app_name">Notes</string>
    <string name="logar">Logar</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="erro_login">Por favor digite os dados Corretamente</string>
    <string name="ola_mundo">Olá Mundo</string>
    <string name="voltar">Voltar</string>
    <string name="gravar">Gravar</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="gravar_dados">Gravar dados</string>
    <string name="excluir_dados">Excluir dados</string>
    <string name="carregar_dados">Carregar Dados</string>
    <string name="verificar_dados">Verificar Dados</string>
    <string name="gravar_arquivo">Gravar Arquivo</string>
    <string name="ler_arquivo">Ler Arquivo</string>
    <string name="excluir_arquivo">Excluir Arquivo</string>
    <string name="fechar_e_retornar">Fechar e retornar</string>
    <string name="header_dados_conta">FIAP Notas - Dados da conta</string>
    <string name="dados_conta_nok">Preencha os dados da conta corretamente</string>
    <string name="cadastro_ok">Cadastro efetuado com sucesso</string>
    <string name="exclusao_ok">Dados Excluidos com êxito</string>
    <string name="dados_login_ok">Dados de login existentes</string>
    <string name="dados_login_nok">Dados de login inexistentes</string>
    <string name="gravar_arquivo_nok">Não foi possivel gravar o arquivo</string>
    <string name="gravar_arquivo_ok">Arquivo gravado com sucesso</string>
    <string name="ler_arquivo_nok">Não foi possivel ler o arquivo</string>
    <string name="excluir_arquivo_nok">Não foi possivel excluir o arquivo</string>
    <string name="excluir_arquivo_ok">Arquivo excluido com sucesso</string>
    <string name="login_nok">Usuario ou senha invalidos</string>
    <string name="limpar_dados">Limpar dados</string>
</resources>
